assets/_scss/_typography.scss
.homepage{
    h1{
        font-family: $display;
        font-size: 2em;
        font-style: italic;
        font-weight: 900;
        margin-top: 2em;
        margin-bottom: 0;

        a{
            font-family: $serif;
        }

        @media(min-width:501px){
            font-size: 3em;
        }

        @media(min-width:600px){
            font-size: 5em;
        }
    }

    h2{
        font-size: 1.5em;
        font-style: italic;
        font-family: $display;
        font-weight: 700;
        overflow: hidden;
        clear: both;
        line-height: 1;

        @media(min-width:501px){
            font-size: 1.75em;
        }

        @media(min-width:600px){
            font-size: 2em;
        }
    }

    h1, h2, p{
        width: 100%;
        float: left;
        clear: both;
    }

    article a{
        text-decoration: none;
    }

    p{
        margin-bottom: 2em;

        @media(min-width:600px){
            margin-bottom: 0em;
        }
    }
}

.hgroup{
    h1{
        margin-bottom: 0;
    }

    h2{
        font-weight: 400; 
    }
}

#archive{
    h3{
        margin-bottom: 0;
        margin-top: 0;
        font-size: $baseline/3;
        font-weight: 400;
    }

    h4{
        font-size: .35em;
        font-weight: 400;
        text-transform: uppercase;
        width: 100%;
        clear: both;
        float: left;
        margin: 1em 0;
    }
}

#portfolio{
    
    h2{
        margin-top: 2em;
        margin-bottom: 0;
    }
    
    h3{
        margin-top: 0;
        margin-bottom:0;
        font-weight: 400;
        font-size: 1.5em;
        float: left;
        clear: both;
        width: 100%;
    }

    h4{
        margin-top: 0;
        margin-bottom: 1em;
        font-weight: 700;
        font-size: $baseline/2;
    }

    .info h4{
        font-weight: 400;
        margin-top: 1em;
        float: left;
        clear: both;
        width: 100%;
    }

    h5{
        text-align: center;
        font-size: 1em;
        font-style: italic;
        font-weight: 400;
        margin-top: 2em;
        padding: 0;
        float: left;
        clear: both;
        width: 100%;

        @media(min-width:501px){
            margin-top: 4em;
        }
    }
}

#archive{
	a { 
        text-decoration: none;
    }

    h4{
        font-style: normal;
    }
}

.date{
    width: 100%;
    font-size: .7em;
    font-family: $serif;
    text-transform: uppercase; 
    color: $subtleDarkText;
    margin: 0;

    @media(min-width:501px){
        //@include gs-span(d, 2, 4);
        
    }
}

.comma-separated{
    list-style: none;
    padding: 0;

    li {
        display: inline;
        width: auto;
        clear: none;
        float: none;

        &:after { content: ','; }
        &:last-child:after { content:""; display: none;}
    }
}

.cta{
    display: inline-block;
    background: $subtleDarkColor;
    width: 10em;
    margin: $baseline 0;
    font-size: $baseline/2;
    line-height: $baseline/1.5;
    font-family: $serif;
    font-style: italic;
    text-align: center;
    font-weight: 400;
    padding: $baseline/4 0;
    text-decoration: none;
    border-radius: .15em;

    &:hover{
        background: $accentColor;
        color: #fff;
    }
}

